--- a/src/main/resources/templates/resume.html
+++ b/src/main/resources/templates/resume.html
@@ -49,51 +49,62 @@
                 · 010-6616-1082 ·
                 <a href="mailto:cimyjh@gmail.com">cimyjh@gmail.com</a>
             </div>
-            <p class="lead mb-5" style="color: black">
-                &nbsp &nbsp 저는 잘하는 일과 하고 싶은 일, 모두를 성취하고 싶습니다. <br/>
-                &nbsp 금융 도메인 지식을 쌓고, IT기술을 통해 구현하는 것은 제가 매우 하고 싶은 일입니다. <br/>
-                하지만 위와 같은 일을 잘할 수 있는 것은 어렵습니다.
-            </p>
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#resumeLong">
-                자기소개 더 보기
-            </button>
-            <!-- Modal -->
-            <div class="modal fade" id="resumeLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalCenterTitle">자기소개 더보기</h5>
-                        </div>
 
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-
-                            <div class="modal-body">
-                                <p class="lead mb-5" style="color: black">
-                                    &nbsp &nbsp 저는 잘하는 일과 하고 싶은 일, 모두를 성취하고 싶습니다. <br/>
-                                    &nbsp 금융 도메인 지식을 쌓고, IT기술을 통해 구현하는 것은 제가 매우 하고 싶은 일입니다. 하지만 위와 같은 일을 잘할 수 있는 것은 어렵습니다.<br/>
-                                    &nbsp 저는 <strong>금융과 IT 역량을 융합한 </strong> 인재가 되고자 노력했습니다. 대학교에서 경영정보학과를 졸업했습니다. 전공에서 재무관리와 같은 경영일반, 데이터베이스 설계 및 운용과 같은 컴퓨터공학을 함께 이수했습니다. 두 가지 영역에서 역량을 강화하고자 각각 <strong>투자자산운용사, 정보처리기사, 데이터 아키텍쳐 준전문가 자격을</strong> 취득했습니다.<br/>
-                                    &nbsp 구체적인 IT 업무를 수행하고자 <strong>Spring Framework를</strong> 활용한 자바 백 엔드 개발자 과정을 이수했으며, 아래와 같은 포트폴리오를 완성했습니다.<br/><br/>
-                                    &nbsp 프로젝트를 완수하면서 수많은 장애물에 부딪쳤습니다. 또한 기술적인 파트에서 제가 숙지해야 할 것도 무궁무진함을 알게 되었습니다.
-                                    겸손하게 Java 기초부터 차근차근 배워왔으며, 기술부채가 최소화되도록 지속해서 공부했습니다.
-                                    부족함이 많은 프로젝트이지만, Spring Framework라는 거인의 어깨에 올라 효과적으로 도움받으며 프로젝트를 완수했습니다.
-                                    감사합니다.
-                                </p>
-                            </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        </div>
-                    </div>
-                </div>
+            <div>
+                <h5><span class="text-primary">본 포트폴리오에 사용한 기술입니다</span></h5>
+                <img class="img-fluid" src="img/logo.jpg" alt="" />
             </div>
+
             <pre>
 
 
             </pre>
 
+            <p class="lead mb-5" style="color: black">
+
+                &nbsp 금융 도메인 지식을 가진 백엔드 프로그래밍 개발자입니다.<br/>
+                Java 프로그래밍 기초 부터 탄탄하게 시작하여 <br/>
+                AWS, Microservice Architecture, JPA 등등 백엔드 개발에 있어 생산성의 향상을 가져 오는 기술을 익혔습니다. <br/>
+                겸손하게 Java 기초부터 차근차근 배워왔으며, 기술부채가 최소화되도록 지속해서 공부했습니다. <br/>
+                부족함이 많은 프로젝트이지만, Spring Framework라는 거인의 어깨에 올라 효과적으로 도움받으며 프로젝트를 완수했습니다.
+
+            </p>
+                <!--            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#resumeLong">-->
+<!--                자기소개 더 보기-->
+<!--            </button>-->
+            <!-- Modal -->
+<!--            <div class="modal fade" id="resumeLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">-->
+<!--                <div class="modal-dialog modal-dialog-centered" role="document">-->
+<!--                    <div class="modal-content">-->
+<!--                        <div class="modal-header">-->
+<!--                            <h5 class="modal-title" id="exampleModalCenterTitle">포트폴리오 소개 더보기</h5>-->
+<!--                        </div>-->
+
+<!--                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
+<!--                                <span aria-hidden="true">&times;</span>-->
+<!--                            </button>-->
+
+<!--                            <div class="modal-body">-->
+<!--                                <p class="lead mb-5" style="color: black">-->
+<!--                                    &nbsp &nbsp 저는 잘하는 일과 하고 싶은 일, 모두를 성취하고 싶습니다. <br/>-->
+<!--                                    &nbsp 금융 도메인 지식을 쌓고, IT기술을 통해 구현하는 것은 제가 매우 하고 싶은 일입니다. 하지만 위와 같은 일을 잘할 수 있는 것은 어렵습니다.<br/>-->
+<!--                                    &nbsp 저는 <strong>금융과 IT 역량을 융합한 </strong> 인재가 되고자 노력했습니다. 대학교에서 경영정보학과를 졸업했습니다. 전공에서 재무관리와 같은 경영일반, 데이터베이스 설계 및 운용과 같은 컴퓨터공학을 함께 이수했습니다. 두 가지 영역에서 역량을 강화하고자 각각 <strong>투자자산운용사, 정보처리기사, 데이터 아키텍쳐 준전문가 자격을</strong> 취득했습니다.<br/>-->
+<!--                                    &nbsp 구체적인 IT 업무를 수행하고자 <strong>Spring Framework를</strong> 활용한 자바 백 엔드 개발자 과정을 이수했으며, 아래와 같은 포트폴리오를 완성했습니다.<br/><br/>-->
+<!--                                    &nbsp 프로젝트를 완수하면서 수많은 장애물에 부딪쳤습니다. 또한 기술적인 파트에서 제가 숙지해야 할 것도 무궁무진함을 알게 되었습니다.-->
+<!--                                    겸손하게 Java 기초부터 차근차근 배워왔으며, 기술부채가 최소화되도록 지속해서 공부했습니다.-->
+<!--                                    부족함이 많은 프로젝트이지만, Spring Framework라는 거인의 어깨에 올라 효과적으로 도움받으며 프로젝트를 완수했습니다.-->
+<!--                                    감사합니다.-->
+<!--                                </p>-->
+<!--                            </div>-->
+<!--                        <div class="modal-footer">-->
+<!--                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+
             <div>
-                <p><strong>포트폴리오 스펙 </strong></p>
+                <p><strong>모놀리스 포트폴리오 스펙 </strong></p>
                 <li>Framework: Spring boot 2.3</li>
                 <li>WAS: AWS(Amazon WebService)의 EC2 </li>
                 <li>DB Servcer: AWS(Amazon WebService)의 RDS </li>
@@ -104,15 +115,36 @@
                 <li>Server side: thymeleaf</li>
                 <li>API: RESTful API</li>
             </div>
-            <pre>
-
-
-        </pre>
 
             <div class="social-icons">
                 <a>Github 소스코드 입니다.</a>
-                <a class="social-icon" href="https://github.com/cimyjh"><i class="fab fa-github"></i></a>
+                <a class="social-icon" href="https://github.com/cimyjh/DMC-oauth2"><i class="fab fa-github"></i></a>
             </div>
+
+            <pre>
+
+
+            </pre>
+
+            <div>
+                <p><strong>마이크로서비스 아키텍쳐 포트폴리오 스펙 </strong></p>
+                <li>Framework: Spring boot 2.3</li>
+                <li>Cloud: Spring Cloud 2</li>
+                <li><strong>Netfilx oss: Eureka, Zuul, Ribbon, Fegign, Hystrix</strong></li>
+                <li>build: docker-compose</li>
+                <li>API: RESTful API</li>
+            </div>
+
+            <div class="social-icons">
+                <a>마이크로서비스 아키텍쳐 Github 소스코드 입니다.</a>
+                <a class="social-icon" href="https://github.com/cimyjh/DMC-netflix"><i class="fab fa-github"></i></a>
+            </div>
+            <pre>
+
+
+            </pre>
+
+
             <br/>
             </div>
     </section>
@@ -163,6 +195,19 @@
                     </p>
                 </div>
             </div>
+
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 >마이크로서비스 아키텍쳐</h3>
+                    <div class="subheading mb-3">Spring Cloud + Netflix oss</div>
+                    <p> &nbsp 위의 모놀리스 아키텍쳐를  마이크로서비스 아키텍쳐로 포팅했습니다.<br/>
+                        Netflix의 Eureka, Zuul, Ribbon, Fegign, Hystrix를 사용했습니다. <br/>
+                        2개의 REST 방식의 백엔드 서비스를 Display라는 서비스에서 Fegign 클라이언트 형식의 조회를 합니다.
+                    </p>
+                </div>
+            </div>
+
+
             <hr class="m-0" />
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="flex-grow-1">
